# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.984 2009/09/01 20:29:01 ub Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --
2.4.5 (2009/??/??)
 - (2009/09/01) Fixed bug#4160 - Toolbar icons not correct in AdminCustomerUser.
 - (2009/09/01) Updated French translation, thanks to Remi Seguy
 - (2009/09/01) Added Options for FirstResponseTime,UpdateTime,SolutionTime and
    CalendarID to bin/otrs.addQueue.
 - (2009/09/01) Fixed bug#4214 - TicketSearch on TicketID with ArrayRef doesn't
    give results.

2.4.4 (2009/08/31)
 - (2009/08/31) Fixed bug#4105 - CustomerUser has access to other Customers
    tickets than defined in CustomerIDs.
 - (2009/08/31) Fixed Android browser support.
 - (2009/08/31) Added SOAP::Lite, which is needed for the XML-RPC Interface,
    to bin/otrs.checkModules.
 - (2009/08/29) Fixed bug#4018 - CustomerCompany in ModuleAction section while
    CustomerUser in Module section.
 - (2009/08/28) Fixed bug#4159 - Text Editor does not work with Konqueror.
 - (2009/08/28) Fixed bug#4117 - UPGRADING: SetPermission.sh has to be run
    before the update script is started.
 - (2009/08/28) Fixed bug#1917 - Wrong Content-Type in downloaded message
    from ArticlePlain.
 - (2009/08/28) Fixed wrong quoting in links in AgentTicketZoom.dtl and
    CustomerTicketZoom.dtl.
 - (2009/08/28) Fixed bug#4203 - No German translation for "My Locked Tickets".
 - (2009/08/28) Fixed bug#1245 - Queues and responses are sorted descending
    instead of ascending in AdminQueueResponses.
 - (2009/08/27) Fixed bug#4198 - Error with services with one bracket in the
    name.
 - (2009/08/27) Fixed bug#4085 - The UPGRADING document is incorrect and
    misleading.
 - (2009/08/27) Fixed bug#2768 - AttachmentsContent-Disposition header